--- a/providers/terragen/templates/outputs.jinja
+++ b/providers/terragen/templates/outputs.jinja
@@ -1,7 +1,7 @@
 {% for key, value in outputs.items() %}
 output "{{ key }}" {
   description = "{{ value.description }}"
-  value = module.{{ module_name }}.{{ key }}
+  value = {{ module_type }}.{{ module_name }}.{{ key }}
 }
 
 {%- endfor %}
