--- a/providers/aws/templates/resource.jinja
+++ b/providers/aws/templates/resource.jinja
@@ -1,13 +1,19 @@
 resource "{{ resource_type }}" "{{ module_name }}" {
 {% for key, value in module_fields.items() %}
-    {{ to_toml(key, value) }}
+  {{ to_toml(key, value) }}
 {%- endfor %}
 
 {% for block in module_blocks %}
-    {{ block }} {
-    {%- for key, value in module_blocks[block].items() %}
-        {{ to_toml(key, value) }}
-    {%- endfor %}
-    }
+  {{ block }} {
+  {%- for key, value in module_blocks[block].items() %}
+    {{ to_toml(key, value) }}
+  {%- endfor %}
+  }
 {% endfor %}
+
+  tags = {
+    {%- for key, value in tags.items() %}
+    {{ to_toml(key, value) }}
+    {%- endfor %}
+  }
 }
